Fix quality gate on master by adopting Java 17 features (#144)